Polish the TwelveData stock history feature.

--- a/Source/WPF/MyMoney/Controls/PasswordControl.xaml
+++ b/Source/WPF/MyMoney/Controls/PasswordControl.xaml
@@ -3,20 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:ui="http://schemas.modernwpf.com/2019"
+             xmlns:c="clr-namespace:Walkabout.Controls"         
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="300">
 
-    <Grid  >
-        <PasswordBox x:Name="PasswordField" PasswordChanged="OnPasswordChanged" 
+  <Grid  >
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="auto"/>
+    </Grid.ColumnDefinitions>
+    <PasswordBox x:Name="PasswordField" PasswordChanged="OnPasswordChanged" 
+                 CaretBrush="{DynamicResource ButtonForeground}"
                      Background="{Binding Path=Background, RelativeSource={RelativeSource AncestorType=UserControl}}"
                  MinWidth="{Binding Path=MinWidth, RelativeSource={RelativeSource AncestorType=UserControl}}"
                  MinHeight="{Binding Path=MinHeight, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
 
-        <TextBox x:Name="PasswordTextBox" Visibility="Collapsed" 
+    <TextBox x:Name="PasswordTextBox" Visibility="Collapsed" TextChanged="OnTextChanged"
+                 CaretBrush="{DynamicResource ButtonForeground}"
                  Background="{Binding Path=Background, RelativeSource={RelativeSource AncestorType=UserControl}}"
                  MinWidth="{Binding Path=MinWidth, RelativeSource={RelativeSource AncestorType=UserControl}}"
                  MinHeight="{Binding Path=MinHeight, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
-    </Grid>
-    
-    
+
+    <c:CustomizableButton Grid.Column="1" Padding="5" Click="OnTogglePassword"
+                          BorderThickness="0" Style="{StaticResource ViewButtonStyle}"
+                          Background="{DynamicResource ButtonBackground}" 
+                          Foreground="{DynamicResource ButtonForeground}" 
+                          MousePressedBackground="{DynamicResource ButtonBackgroundPressed}" 
+                          MousePressedForeground="{DynamicResource ButtonForegroundPressed}" 
+                          MouseOverBackground="{DynamicResource ButtonBackgroundPointerOver}" 
+                          MouseOverForeground="{DynamicResource ButtonForegroundPointerOver}" 
+                          >
+      <ui:SymbolIcon Symbol="View" />
+    </c:CustomizableButton>
+  </Grid>
+
+
 </UserControl>
