--- a/Source/WPF/MyMoney/MainWindow.xaml
+++ b/Source/WPF/MyMoney/MainWindow.xaml
@@ -366,17 +366,20 @@
               <cc:CategoryChart x:Name="PieChartExpenses" CategoryType="Expense"/>
             </TabItem>
 
-            <TabItem x:Name="TabStock" Header="Stock" Visibility="Collapsed">
+            <TabItem x:Name="TabStock" Visibility="Collapsed">
+              <TabItem.Header>
+                <TextBlock x:Name="TabStockHeaderText" Text="Stock"/>
+              </TabItem.Header>
               <vc:TrendGraph x:Name="StockGraph"  ShowBalance="False"
-                                 Series1Color="{DynamicResource AreaChartColor1}"
-                                 Series2Color="{DynamicResource AreaChartColor2}"
-                                 Series3Color="{DynamicResource AreaChartColor3}"
-                                 Series4Color="{DynamicResource AreaChartColor4}"
-                                 Series5Color="{DynamicResource AreaChartColor5}"
-                                 Series6Color="{DynamicResource AreaChartColor6}"
-                                 Series7Color="{DynamicResource AreaChartColor7}"
-                                 Series8Color="{DynamicResource AreaChartColor8}"
-                            />
+                          Series1Color="{DynamicResource AreaChartColor1}"
+                          Series2Color="{DynamicResource AreaChartColor2}"
+                          Series3Color="{DynamicResource AreaChartColor3}"
+                          Series4Color="{DynamicResource AreaChartColor4}"
+                          Series5Color="{DynamicResource AreaChartColor5}"
+                          Series6Color="{DynamicResource AreaChartColor6}"
+                          Series7Color="{DynamicResource AreaChartColor7}"
+                          Series8Color="{DynamicResource AreaChartColor8}"
+                  />
             </TabItem>
 
             <TabItem x:Name="TabLoan" Header="Payments" Visibility="Collapsed">
