--- a/Source/WPF/MyMoney/Dialogs/TaxReportDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/TaxReportDialog.xaml
@@ -38,9 +38,9 @@
                 <ComboBoxItem>Date Sold</ComboBoxItem>
             </ComboBox>
         </StackPanel>
-        
 
-        <CheckBox Margin="10,5,10,5" x:Name="CapitalGainsOnlyCheckBox" Grid.Row="4">Capital Gains Only</CheckBox>
+
+        <CheckBox Margin="10,5,10,5" x:Name="InvestmentsOnlyCheckBox" Grid.Row="4">Investments Only</CheckBox>
 
         <StackPanel Margin="10,20,10,5" Orientation="Horizontal" Grid.Row="6"  HorizontalAlignment="Right">
             <Button Margin="5,0,5,0" MinWidth="70" IsDefault="True" x:Name="OK" Click="OK_Click">_Ok</Button>
