--- a/Source/WPF/MyMoney/App.xaml
+++ b/Source/WPF/MyMoney/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Startup="MyApplicationStartup"             
+             DispatcherUnhandledException="OnUnhandledException"
              xmlns:ui="http://schemas.modernwpf.com/2019">
              
 
