--- a/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/AccountsControl.xaml
@@ -84,6 +84,7 @@
         <CommandBinding  Command="local:AccountsControl.CommandExportAccount" Executed="OnExportAccount" CanExecute="CanExportAccount"/>
         <CommandBinding  Command="local:AccountsControl.CommandExportList" Executed="OnExportAccountList" />
         <CommandBinding  Command="local:AccountsControl.CommandImportCsv" Executed="OnImportAccountCsv" />
+        <CommandBinding  Command="local:AccountsControl.CommandEditCsvMapping" Executed="OnEditCsvMapping" CanExecute="HasCsvMapping" />
         <CommandBinding  Command="local:AccountsControl.CommandToggleClosedAccounts" Executed="OnToggleShowClosedAccounts" CanExecute="CanToggleShowClosedAccounts"/>
     </UserControl.CommandBindings>
 
@@ -118,12 +119,14 @@
                 <MenuItem AutomationProperties.AutomationId="ViewTransfersToThisAccount" Header="View _Transfers To This Account" Command="local:AccountsControl.CommandViewTransfers" />
                 <MenuItem AutomationProperties.AutomationId="Export" Header="E_xport Account..." Command="local:AccountsControl.CommandExportAccount"/>
                 <MenuItem AutomationProperties.AutomationId="ImportCsv" Header="_Import Csv..." Command="local:AccountsControl.CommandImportCsv"/>
+                <MenuItem AutomationProperties.AutomationId="EditCsvMapping" Header="Edit Csv _Mapping..." Command="local:AccountsControl.CommandEditCsvMapping"/>
+                
                 <Separator />
                 <MenuItem AutomationProperties.AutomationId="NewAccount" Header="_New Account..." Command="local:AccountsControl.CommandNewAccount" />
                 <MenuItem AutomationProperties.AutomationId="DownloadAccounts" Header="_Download Accounts..." Command="local:AccountsControl.CommandDownloadAccounts" />
                 <MenuItem AutomationProperties.AutomationId="NewLoan" Header="New _Loan..." Command="local:AccountsControl.CommandAddNewLoanAccount" />
                 <MenuItem AutomationProperties.AutomationId="DeleteAccount" Header="Delete _Account" Command="local:AccountsControl.CommandDeleteAccount" />
-                <MenuItem AutomationProperties.AutomationId="Export" Header="Ex_port List..." Command="local:AccountsControl.CommandExportList"/>
+                <MenuItem AutomationProperties.AutomationId="Export" Header="_Export List..." Command="local:AccountsControl.CommandExportList"/>
                 <Separator />
                 <MenuItem AutomationProperties.AutomationId="DisplayClosedAccounts" Name="MenuDisplayClosedAccounts" Header="Display _Closed Accounts" Command="local:AccountsControl.CommandToggleClosedAccounts"/>
             </ContextMenu>
