- Feature: Add account summary report with date picker.   - Feature: Switch to https://www.fastforex.io/ for exchange rate info.

--- a/Source/WPF/MyMoney/Controls/AppSettings.xaml
+++ b/Source/WPF/MyMoney/Controls/AppSettings.xaml
@@ -36,6 +36,7 @@
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
@@ -79,6 +80,10 @@
       <CheckBox Grid.Row="10" Grid.ColumnSpan="3" x:Name="checkBoxAcceptReconciled"  Checked="OnAcceptReconciledChanged" Unchecked="OnAcceptReconciledChanged">Accept reconciled transactions</CheckBox>
 
       <CheckBox Grid.Row="11" Grid.ColumnSpan="3" x:Name="checkBoxOfxUtf8Override"  Checked="OnOfxOverrideChanged" Unchecked="OnOfxOverrideChanged">Import .ofx and .qfx files as UTF-8</CheckBox>
+
+      <Label Grid.Row="12" Grid.Column="0"  VerticalAlignment="Center">fastFOREX key:</Label>
+      <TextBox Grid.Row="12" Grid.Column="1" x:Name="textBoxFastForex"  TextChanged="OnFastForexKeyChanged" Margin="5"
+                ToolTip="Enter API key for fastFOREX exchange rate service"/>
 
     </Grid>
   </Border>
