--- a/Source/WPF/MyMoney/Dialogs/OnlineServiceDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/OnlineServiceDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<local:BaseDialog 
-        x:Class="Walkabout.Dialogs.StockQuoteServiceDialog"
+        x:Class="Walkabout.Dialogs.OnlineServiceDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         mc:Ignorable="d" SizeToContent="WidthAndHeight"
-        Title="Stock Quote Service Dialog"
+        Title="Online Service Dialog"
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
         WindowStyle="ToolWindow" >
