Feature: add support for Brokerage .csv files (like the ones from Fidelity download)

--- a/Source/WPF/MyMoney/Dialogs/CsvImportDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CsvImportDialog.xaml
@@ -7,7 +7,6 @@
         mc:Ignorable="d"
         Title="CSV Import Field Map" Height="450" Width="400">
   <Window.Resources>
-
     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
       <Setter Property="MinWidth" Value="70" />
       <Setter Property="MinHeight" Value="30" />
@@ -32,11 +31,12 @@
   </Window.Resources>
   <Grid Margin="20">
     <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
       <RowDefinition Height="*"/>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-      <ListView x:Name="FieldListView" Grid.Row="0" ItemContainerStyle="{StaticResource AlternationItemStyle}"
+    <ListView x:Name="FieldListView" Grid.Row="1" ItemContainerStyle="{StaticResource AlternationItemStyle}"
               BorderThickness="1" BorderBrush="{DynamicResource GridLineBrush}"
               Background="Transparent" AlternationCount="2">
       <ListView.Resources>
@@ -71,12 +71,12 @@
                 </controls:FilteringComboBox >
               </DataTemplate>
             </GridViewColumn.CellTemplate>
-           </GridViewColumn>
+          </GridViewColumn>
         </GridView>
       </ListView.View>
     </ListView>
     <!-- OK or Cancel -->
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="5" Margin="10,2,10,10">
+    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="2" Margin="10,2,10,10">
       <CheckBox Name="negateCheckBox" IsChecked="{Binding Negate}" MinWidth="32" />
       <TextBlock Text="Negate Amounts" VerticalAlignment="Center" Margin="0,0,10,0"/>
       <Button Name="okButton" IsDefault="True" Margin="0,0,10,0" Click="OnOk">OK</Button>
