--- a/Source/WPF/MyMoney/Dialogs/ReportRangeDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/ReportRangeDialog.xaml
@@ -48,7 +48,7 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <Grid.RowDefinitions>
